--- a/eSusInsurers/package.json
+++ b/eSusInsurers/package.json
@@ -6,10 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "prod-build-dev": "ng build --configuration=development --build-optimizer",
-    "prod-build-qa": "ng build --configuration=qa --build-optimizer",
-    "prod-build-stage": "ng build --configuration=stage --build-optimizer",
-    "prod-build-prod": "ng build --configuration=production --build-optimizer",
+    "prod-build-dev": "ng build --configuration=development",
+    "prod-build-qa": "ng build --configuration=qa",
+    "prod-build-stage": "ng build --configuration=stage",
+    "prod-build-prod": "ng build --configuration=production",
     "test": "ng test",
     "serve:ssr:eSusInsurers": "node dist/e-sus-insurers/server/server.mjs",
     "lint": "ng lint"
