--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - working-directory: eSusInsurers 
     - run: npm run build
+    - working-directory: eSusInsurers
     - run: npm test
+    - working-directory: eSusInsurers
       env:
         CI: true
   windows-build:
@@ -44,7 +47,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - working-directory: eSusInsurers 
     - run: npm run build
+    - working-directory: eSusInsurers 
     - run: npm test
+    - working-directory: eSusInsurers 
       env:
         CI: true
