--- a/eSusInsurers-Web/package.json
+++ b/eSusInsurers-Web/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "prod-build-dev": "ng build --configuration=development",
-    "prod-build-qa": "ng build --configuration=qa",
+    "prod-build-qa": "ng build --configuration qa",
     "prod-build-stage": "ng build --configuration=stage",
     "prod-build-prod": "ng build --configuration=production",
     "test": "ng test",
