--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,14 +19,13 @@ jobs:
         node-version: [18.x]
 
     steps:
+     run: |
+      cd ${{ github.workspace }}
     - uses: actions/checkout@v3
-      with:
-        path: src
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install -g @angular/cli
     - run: npm install
     - run: npm run build
     - run: npm test
@@ -41,12 +40,14 @@ jobs:
         node-version: [18.x]
 
     steps:
+     run: |
+      cd ${{ github.workspace }}
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install -g @angular/cli
+  
     - run: npm install
     - run: npm run build
     - run: npm test
