--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --watch=false --browsers=ChromeHeadlessPuppeteer",
     "serve:ssr:eSusInsurers": "node dist/e-sus-insurers/server/server.mjs",
     "lint": "ng lint"
   },
@@ -25,6 +25,8 @@
     "@angular/ssr": "^17.0.7",
     "chart.js": "^4.4.1",
     "express": "^4.18.2",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "moment": "^2.29.4",
     "ng2-charts": "^5.0.4",
     "ngx-cookie-service": "^17.0.1",
@@ -32,6 +34,8 @@
     "ngx-spinner": "^16.0.2",
     "primeicons": "^6.0.1",
     "primeng": "^17.2.0",
+    "protractor": "^7.0.0",
+    "puppeteer": "^22.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
